# cargo-vendor-add

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
src/: main.rs
tests/: test.rs
